--- a/NewEngine.vcxproj.filters
+++ b/NewEngine.vcxproj.filters
@@ -351,7 +351,7 @@
     <ClCompile Include="Application\SourceCode\RadialBlur.cpp">
       <Filter>Application\Source\PostEffect</Filter>
     </ClCompile>
-    <ClCompile Include="NewEngine\Object\3D\Model\ObjModel.cpp">
+    <ClCompile Include="NewEngine\Object\Other\Model\ObjModel.cpp">
       <Filter>NewEngine\Source\Object\Other\Model</Filter>
     </ClCompile>
     <ClCompile Include="NewEngine\Object\Other\Model.cpp">
@@ -542,9 +542,6 @@
     <ClInclude Include="NewEngine\Render\RenderBase.h">
       <Filter>NewEngine\Header\Render</Filter>
     </ClInclude>
-    <ClInclude Include="NewEngine\Object\Other\FbxModel.h">
-      <Filter>NewEngine\Header\Object\Other</Filter>
-    </ClInclude>
     <ClInclude Include="NewEngine\Render\ShaderObjectManager.h">
       <Filter>NewEngine\Header\Render</Filter>
     </ClInclude>
@@ -559,9 +556,6 @@
     </ClInclude>
     <ClInclude Include="NewEngine\Sound\WaveSound.h">
       <Filter>NewEngine\Header\Sound</Filter>
-    </ClInclude>
-    <ClInclude Include="NewEngine\Util\Enum.h">
-      <Filter>NewEngine\Header</Filter>
     </ClInclude>
     <ClInclude Include="NewEngine\Object\Other\Billboard.h">
       <Filter>NewEngine\Header\Object\Other</Filter>
@@ -599,7 +593,13 @@
     <ClInclude Include="NewEngine\Object\Other\Model.h">
       <Filter>NewEngine\Header\Object\Other\Model</Filter>
     </ClInclude>
-    <ClInclude Include="NewEngine\Object\3D\Model\ObjModel.h">
+    <ClInclude Include="NewEngine\Object\Other\Model\ObjModel.h">
+      <Filter>NewEngine\Header\Object\Other\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Util\Enum.h">
+      <Filter>NewEngine\Header\Util</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Object\Other\FbxModel.h">
       <Filter>NewEngine\Header\Object\Other\Model</Filter>
     </ClInclude>
   </ItemGroup>
