--- a/imgui.ini
+++ b/imgui.ini
@@ -102,6 +102,11 @@ Size=359,197
 Collapsed=0
 DockId=0x0000000D,0
 
+[Window][HumanoidBody]
+Pos=1247,15
+Size=642,123
+Collapsed=0
+
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=604,281 Size=418,284 Split=X
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=181,253 Selected=0x3FC1CF52
