--- a/NewEngine.vcxproj
+++ b/NewEngine.vcxproj
@@ -119,6 +119,7 @@
     <ClCompile Include="Application\SourceCode\GaussianBlur.cpp" />
     <ClCompile Include="Application\SourceCode\Glare.cpp" />
     <ClCompile Include="Application\SourceCode\HumanoidBody.cpp" />
+    <ClCompile Include="Application\SourceCode\IWeaponMotion.cpp" />
     <ClCompile Include="Application\SourceCode\LoadManager.cpp" />
     <ClCompile Include="Application\SourceCode\MalletMotion.cpp" />
     <ClCompile Include="Application\SourceCode\Player.cpp" />
@@ -204,6 +205,7 @@
     <ClInclude Include="Application\SourceCode\GaussianBlur.h" />
     <ClInclude Include="Application\SourceCode\Glare.h" />
     <ClInclude Include="Application\SourceCode\HumanoidBody.h" />
+    <ClInclude Include="Application\SourceCode\IWeaponMotion.h" />
     <ClInclude Include="Application\SourceCode\LoadManager.h" />
     <ClInclude Include="Application\SourceCode\MalletMotion.h" />
     <ClInclude Include="Application\SourceCode\Player.h" />
