--- a/NewEngine.vcxproj.filters
+++ b/NewEngine.vcxproj.filters
@@ -435,6 +435,9 @@
     <ClCompile Include="Application\SourceCode\IMotion.cpp">
       <Filter>Application\Source\Motion\Human</Filter>
     </ClCompile>
+    <ClCompile Include="Application\SourceCode\RollMotion.cpp">
+      <Filter>Application\Source\Motion\Human</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NewEngine\Render\Buffer\ConstantBuffer.h">
@@ -713,9 +716,6 @@
     <ClInclude Include="Application\SourceCode\MalletMotion.h">
       <Filter>Application\Header\Motion\Weapon</Filter>
     </ClInclude>
-    <ClInclude Include="Application\SourceCode\HumanoidBody.h">
-      <Filter>Uncategorized\Header</Filter>
-    </ClInclude>
     <ClInclude Include="Application\SourceCode\BackstepMotion.h">
       <Filter>Application\Header\Motion\Human</Filter>
     </ClInclude>
@@ -724,6 +724,12 @@
     </ClInclude>
     <ClInclude Include="Application\SourceCode\MoveMotion.h">
       <Filter>Application\Header\Motion\Human</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\SourceCode\RollMotion.h">
+      <Filter>Application\Header\Motion\Human</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\SourceCode\HumanoidBody.h">
+      <Filter>Uncategorized\Header</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
