--- a/External/Assmip/zlibstatic.vcxproj.filters
+++ b/External/Assmip/zlibstatic.vcxproj.filters
@@ -1,89 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\adler32.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\compress.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\crc32.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\deflate.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\gzclose.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\gzlib.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\gzread.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\gzwrite.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\inflate.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\infback.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\inftrees.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\inffast.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\trees.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\uncompr.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\zutil.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
+    <ClCompile Include="$(ProjectDir)\contrib\zlib\adler32.c" />
+    <ClCompile Include="$(ProjectDir)\contrib\zlib\compress.c" />
+    <ClCompile Include="$(ProjectDir)\contrib\zlib\crc32.c" />
+    <ClCompile Include="$(ProjectDir)\contrib\zlib\deflate.c" />
+    <ClCompile Include="$(ProjectDir)\contrib\zlib\gzclose.c" />
+    <ClCompile Include="$(ProjectDir)\contrib\zlib\gzlib.c" />
+    <ClCompile Include="$(ProjectDir)\contrib\zlib\gzread.c" />
+    <ClCompile Include="$(ProjectDir)\contrib\zlib\gzwrite.c" />
+    <ClCompile Include="$(ProjectDir)\contrib\zlib\inflate.c" />
+    <ClCompile Include="$(ProjectDir)\contrib\zlib\infback.c" />
+    <ClCompile Include="$(ProjectDir)\contrib\zlib\inftrees.c" />
+    <ClCompile Include="$(ProjectDir)\contrib\zlib\inffast.c" />
+    <ClCompile Include="$(ProjectDir)\contrib\zlib\trees.c" />
+    <ClCompile Include="$(ProjectDir)\contrib\zlib\uncompr.c" />
+    <ClCompile Include="$(ProjectDir)\contrib\zlib\zutil.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="C:\1.School\2.NewEngine\Assimp\contrib\zlib\zconf.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\zlib.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\crc32.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\deflate.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\gzguts.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\inffast.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\inffixed.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\inflate.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\inftrees.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\trees.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\zutil.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <CustomBuild Include="C:\1.School\2.NewEngine\assimp-5.2.5\contrib\zlib\CMakeLists.txt" />
+    <ClInclude Include="$(ProjectDir)\contrib\zlib\zconf.h" />
+    <ClInclude Include="$(ProjectDir)\contrib\zlib\zlib.h" />
+    <ClInclude Include="$(ProjectDir)\contrib\zlib\crc32.h" />
+    <ClInclude Include="$(ProjectDir)\contrib\zlib\deflate.h" />
+    <ClInclude Include="$(ProjectDir)\contrib\zlib\gzguts.h" />
+    <ClInclude Include="$(ProjectDir)\contrib\zlib\inffast.h" />
+    <ClInclude Include="$(ProjectDir)\contrib\zlib\inffixed.h" />
+    <ClInclude Include="$(ProjectDir)\contrib\zlib\inflate.h" />
+    <ClInclude Include="$(ProjectDir)\contrib\zlib\inftrees.h" />
+    <ClInclude Include="$(ProjectDir)\contrib\zlib\trees.h" />
+    <ClInclude Include="$(ProjectDir)\contrib\zlib\zutil.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
